--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "prisma": "^6.13.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.15.0"
   }
 }
