modify docker file and docker-ci

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,19 +7,34 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set tag
+      id: tag
+      run: |
+        # Use a date-based tag with short SHA (you can customize this)
+        TAG="v$(date +%Y%m%d).${{ github.run_number }}"
+        echo "TAG=$TAG" >> $GITHUB_ENV
+        echo "Using tag: $TAG"
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag git.local.skill17.com/${{ github.repository }}
-    - name: docker login
+      run: |
+        docker build . \
+          --file Dockerfile \
+          --tag git.startechs.xyz/${{ github.repository }}:$TAG \
+          --tag git.startechs.xyz/${{ github.repository }}:latest
+
+    - name: Docker login
       env:
         USER: ${{ secrets.USER }}
         PASS: ${{ secrets.PASS }}
-      run: docker login -u $USER -p $PASS git.local.skill17.com
-    - name: push to docker hub
-      run: docker push git.local.skill17.com/${{ github.repository }}
+      run: docker login -u $USER -p $PASS git.startechs.xyz
+
+    - name: Push tagged image
+      run: |
+        docker push git.startechs.xyz/${{ github.repository }}:$TAG
+        docker push git.startechs.xyz/${{ github.repository }}:latest
