--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.8.1",
     "zod": "^4.0.17"
   },
+  "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.15.0"
